force-app/main/default/objects/Delivery_Quality_Check__c/Delivery_Quality_Check__c.object-meta.xml
<CustomObject>
    <label>Delivery Quality Check</label>
    <nameField>
        <displayFormat>DQC-{YYYY}-{0000}</displayFormat>
        <label>DQC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Quality Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>