force-app/main/default/objects/Delivery_Quality_Check__c/fields/Check_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_DateTime__c</fullName>
    <label>Check Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>