force-app/main/default/objects/Delivery_Quality_Check__c/fields/Delivery_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Issue_Type__c</fullName>
    <label>Delivery Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Species</fullName>
            </value>
            <value>
                <fullName>Short Count</fullName>
            </value>
            <value>
                <fullName>Quality Failure</fullName>
            </value>
            <value>
                <fullName>Wrong Type (Mulch)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>