force-app/main/default/objects/Delivery_Quality_Check__c/fields/Delivery_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket_Number__c</fullName>
    <label>Delivery Ticket Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>