force-app/main/default/objects/Delivery_Quality_Check__c/fields/Expected_Sod_Roll_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sod_Roll_Coverage__c</fullName>
    <description>Snapshot: copied from WorkOrder.Community_Sod_Roll_Coverage__c at DQC creation time. Blank means community had no coverage rate set — Sod_Rolls_Expected__c formula applies 9 SF fallback. Preserved so calculation is stable if community rate changes after inspection. PKG-DQC-PARENT-01a.</description>
    <label>Expected Sod Roll Coverage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>