force-app/main/default/objects/Delivery_Quality_Check__c/fields/Expected_Sod_Species__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sod_Species__c</fullName>
    <description>Snapshot: TEXT(WorkOrder.Sod_Species__c) at DQC creation time. Stored as text to avoid picklist dependency on parent object. Used in Sod_Species_Match__c formula to compare against delivered species. PKG-DQC-PARENT-01a.</description>
    <label>Expected Sod Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>