force-app/main/default/objects/Delivery_Quality_Check__c/fields/Expected_Sod_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sod_Square_Footage__c</fullName>
    <description>Snapshot: copied from WorkOrder.Sod_Square_Footage__c at DQC creation time by LOVING_Delivery_QC_Submit. Preserved so Sod_Rolls_Expected__c formula remains stable if WorkOrder data changes after inspection. PKG-DQC-PARENT-01a.</description>
    <label>Expected Sod Square Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>