force-app/main/default/objects/Delivery_Quality_Check__c/fields/FM_Decision__c.field-meta.xml
<CustomField>
    <fullName>FM_Decision__c</fullName>
    <label>FM Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Partial Proceed</fullName>
            </value>
            <value>
                <fullName>Replace Today</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>