force-app/main/default/objects/Delivery_Quality_Check__c/fields/FM_Notified__c.field-meta.xml
<CustomField>
    <fullName>FM_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Notified</label>
    <type>Checkbox</type>
</CustomField>