force-app/main/default/objects/Delivery_Quality_Check__c/fields/Issue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Issue_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Flag</label>
    <type>Checkbox</type>
</CustomField>