force-app/main/default/objects/Delivery_Quality_Check__c/fields/Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issue_Notes__c</fullName>
    <label>Issue Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>