force-app/main/default/objects/Delivery_Quality_Check__c/fields/Mulch_Included__c.field-meta.xml
<CustomField>
    <fullName>Mulch_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mulch Included</label>
    <type>Checkbox</type>
</CustomField>