force-app/main/default/objects/Delivery_Quality_Check__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Delivery Quality Checks</relationshipLabel>
    <relationshipName>Delivery_Quality_Checks_By</relationshipName>
    <type>Lookup</type>
</CustomField>