force-app/main/default/objects/Delivery_Quality_Check__c/fields/Photos_Count__c.field-meta.xml
<CustomField>
    <fullName>Photos_Count__c</fullName>
    <label>Photos Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>