force-app/main/default/objects/Delivery_Quality_Check__c/fields/Sod_Count_Variance__c.field-meta.xml
<CustomField>
    <fullName>Sod_Count_Variance__c</fullName>
    <formula>Sod_Rolls_Delivered__c - Sod_Rolls_Expected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sod Count Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>