force-app/main/default/objects/Delivery_Quality_Check__c/fields/Sod_Included__c.field-meta.xml
<CustomField>
    <fullName>Sod_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sod Included</label>
    <type>Checkbox</type>
</CustomField>