force-app/main/default/objects/Delivery_Quality_Check__c/fields/Sod_Rolls_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Sod_Rolls_Delivered__c</fullName>
    <label>Sod Rolls Delivered</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>