force-app/main/default/objects/Delivery_Quality_Check__c/fields/Sod_Species_Match__c.field-meta.xml
<CustomField>
    <fullName>Sod_Species_Match__c</fullName>
    <description>Formula: true when Sod_Species_Delivered__c matches Expected_Sod_Species__c snapshot. Expected_Sod_Species__c is stored as text at DQC creation. TEXT() on delivered side for consistent picklist comparison. If false and Sod_Included__c is true, FM intervention required. PKG-DQC-PARENT-01b.</description>
    <formula>IF(
  Sod_Included__c = TRUE,
  TEXT(Sod_Species_Delivered__c) = Expected_Sod_Species__c,
  TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sod Species Match</label>
    <type>Checkbox</type>
</CustomField>