force-app/main/default/objects/Delivery_Quality_Check__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Quality Checks</relationshipLabel>
    <relationshipName>Delivery_Quality_Checks_Supplier</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>